adds child form and child item react components

--- a/lab-tim/frontend/src/component/child-item/_child-item.scss
+++ b/lab-tim/frontend/src/component/child-item/_child-item.scss
@@ -1,6 +1,6 @@
 @import '../../style/lib/vars';
 
-.category-item {
+.child-item, .child-update-form {
   border: .4vw solid $black;
   padding: 1vw;
   background: $white;
